Added HTML event handler

--- a/Basic_Javascript_Projects/Project1_Expressions_Alert/index.html
+++ b/Basic_Javascript_Projects/Project1_Expressions_Alert/index.html
@@ -6,6 +6,6 @@
                 <script src="./JS/main.js"></script>
 	</head>
 	<body>
-                
+                <button onmouseout="document.write('And its gone!')">?</button>
 	</body>
 </html>
