--- a/Basic_Javascript_Projects/Project2_Functions/index.html
+++ b/Basic_Javascript_Projects/Project2_Functions/index.html
@@ -14,9 +14,11 @@
 	</head>
 
 	<body>
-                <button onclick="myFirstFunction()" id="buttonText">
+                <!---BUTTON--->
+                <button onclick="myFirstFunction()" id="buttonText"> 
                         Click me!
                 </button>
+                <!--TEXTBOX-->
                 <div class="box">
                         <p id="concatenate" onmouseover="myFunction()">?what?</p>
                 </div>           
