Added third project on js math operator

--- a/Basic_Javascript_Projects/Project3_Math_Operators/index.html
+++ b/Basic_Javascript_Projects/Project3_Math_Operators/index.html
@@ -6,6 +6,18 @@
                 <script src="JS/main.js"></script>
 	</head>
 	<body>
-                <p id="math" onclick="myMath()">CLICK</p>
+                <p id="math" onclick="myAdd()">3+9=</p>
+		<p id="math2" onclick="mySubtract()">9-3=</p>
+		<p id="math3" onclick="myMultiply()">9*3=</p>
+		<p id="math4" onclick="myDivide()">9/3=</p>
+		<p id="math5" onclick="myBrokenMath()">?=</p>
+		<p id="math6" onclick="myModulus()">11%3=</p>
+		<p id="math7" onclick="myNegative()">-(9-3)=</p>
+		<p id="math8" onclick="myIncrement()">9+1=</p>
+		<p id="math9" onclick="myDecrement()">9-1=</p>
+		<p id="math10" onclick="myRandomInt()">Rando(1-100)=</p>
+		<form>
+			<p id="outputBox" onclick="myDecider()">?</p>
+		</form>
 	</body>
 </html>
