Moved around HTML1 files

--- a/Intermediate_Javascript_Projects/HTML1.html
+++ b/Intermediate_Javascript_Projects/HTML1.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>TITLE</title>
 		<meta charset="utf-8">
-                <script src="HTML1.js" defer></script>
+                <script src="./JS/HTML1.js" defer></script>
 	</head>
 	<body>
                 <p>What is your favorite of these colors</p>
